--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "esm": "^3.2.25"
   },
   "bin": {
-    "@glenglen/first-npm-cli": "./bin/first-npm-cli.js",
-    "first-npm-cli": "./bin/first-npm-cli.js"
+    "first-npm-cli": "bin/first-npm-cli.js",
+    "publish": "bin/publish.js"
   }
 }
