--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "author": "Glen Burchfield <g@glenned.com> (https://www.glenned.com)",
   "license": "MIT",
   "dependencies": {
+    "csv-parse": "^5.1.0",
     "esm": "^3.2.25"
   },
   "bin": {
     "first-npm-cli": "bin/first-npm-cli.js",
     "publish": "bin/publish.js"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.40",
+    "typescript": "^4.7.3"
   }
 }
