--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "author": "Glen Burchfield <g@glenned.com> (https://www.glenned.com)",
   "license": "MIT",
   "dependencies": {
+    "base32-encode": "^2.0.0",
     "csv-parse": "^5.1.0",
-    "esm": "^3.2.25"
+    "esm": "^3.2.25",
+    "otp-generator": "^4.0.0",
+    "totp-generator": "^0.0.13"
   },
   "bin": {
     "first-npm-cli": "bin/first-npm-cli.js",
@@ -14,6 +17,9 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.40",
+    "@types/otp-generator": "^4.0.0",
+    "@types/totp-generator": "^0.0.4",
+    "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
 }
