--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
-  "main": "src"
+  "main": "dist/index.ts",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "prepublish": "tsc"
+  }
 }
