--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "main": "dist/index.ts",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "build": "tsc"
   }
 }
