--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "main": "dist/index.ts",
   "types": "dist/index.d.ts",
+  "files": ["dist"],
   "scripts": {
     "prepublish": "tsc",
     "build": "tsc"
