--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glentils",
-  "version": "0.3.0-rc.1",
+  "version": "0.3.0",
   "decription": "Software utilities by Glen.",
   "author": "Glen Burchfield <g@glenned.com> (https://www.glenned.com)",
   "license": "MIT",
